//
//  Copyright (c) SRG SSR. All rights reserved.
//
//  License information is available from the LICENSE file.
//

#import "AccessibilityIdentifierConstants.h"

AccessibilityIdentifier const AccessibilityIdentifierVideosTabBarItem = @"videosTabBarItem";
AccessibilityIdentifier const AccessibilityIdentifierAudiosTabBarItem =  @"audiosTabBarItem";
AccessibilityIdentifier const AccessibilityIdentifierLivestreamsTabBarItem = @"livestreamsTabBarItem";
AccessibilityIdentifier const AccessibilityIdentifierTvGuideTabBarItem = @"tvGuideTabBarItem";
AccessibilityIdentifier const AccessibilityIdentifierShowsTabBarItem = @"showsTabBarItem";
AccessibilityIdentifier const AccessibilityIdentifierSearchTabBarItem = @"searchTabBarItem";
AccessibilityIdentifier const AccessibilityIdentifierProfileTabBarItem = @"profileTabBarItem";

AccessibilityIdentifier const AccessibilityIdentifierCloseButton = @"closeButton";
